@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.4927
+//     Runtime Version:2.0.50727.5444
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -15,7 +15,7 @@
 [assembly: global::System.Data.Objects.DataClasses.EdmRelationshipAttribute("testModel", "FK_Books_Publishers", "Publishers", global::System.Data.Metadata.Edm.RelationshipMultiplicity.One, typeof(MySql.Data.Entity.Tests.Publisher), "Books", global::System.Data.Metadata.Edm.RelationshipMultiplicity.Many, typeof(MySql.Data.Entity.Tests.Book))]
 
 // Original file name:
-// Generation date: 2/11/2010 3:53:16 PM
+// Generation date: 5/26/2011 9:15:03 AM
 namespace MySql.Data.Entity.Tests
 {
     
@@ -200,6 +200,21 @@ namespace MySql.Data.Entity.Tests
         }
         private global::System.Data.Objects.ObjectQuery<DataTypeTest> _DataTypeTests;
         /// <summary>
+        /// There are no comments for Computers in the schema.
+        /// </summary>
+        public global::System.Data.Objects.ObjectQuery<Computer> Computers
+        {
+            get
+            {
+                if ((this._Computers == null))
+                {
+                    this._Computers = base.CreateQuery<Computer>("[Computers]");
+                }
+                return this._Computers;
+            }
+        }
+        private global::System.Data.Objects.ObjectQuery<Computer> _Computers;
+        /// <summary>
         /// There are no comments for Employees in the schema.
         /// </summary>
         public void AddToEmployees(Employee employee)
@@ -268,6 +283,13 @@ namespace MySql.Data.Entity.Tests
         public void AddToDataTypeTests(DataTypeTest dataTypeTest)
         {
             base.AddObject("DataTypeTests", dataTypeTest);
+        }
+        /// <summary>
+        /// There are no comments for Computers in the schema.
+        /// </summary>
+        public void AddToComputers(Computer computer)
+        {
+            base.AddObject("Computers", computer);
         }
     }
     /// <summary>
@@ -1768,5 +1790,253 @@ namespace MySql.Data.Entity.Tests
         private string _idAsChar;
         partial void OnidAsCharChanging(string value);
         partial void OnidAsCharChanged();
+    }
+    /// <summary>
+    /// There are no comments for testModel.Computer in the schema.
+    /// </summary>
+    /// <KeyProperties>
+    /// Id
+    /// </KeyProperties>
+    [global::System.Data.Objects.DataClasses.EdmEntityTypeAttribute(NamespaceName="testModel", Name="Computer")]
+    [global::System.Runtime.Serialization.DataContractAttribute(IsReference=true)]
+    [global::System.Serializable()]
+    [global::System.Runtime.Serialization.KnownTypeAttribute(typeof(global::MySql.Data.Entity.Tests.DesktopComputer))]
+    [global::System.Runtime.Serialization.KnownTypeAttribute(typeof(global::MySql.Data.Entity.Tests.LaptopComputer))]
+    [global::System.Runtime.Serialization.KnownTypeAttribute(typeof(global::MySql.Data.Entity.Tests.TabletComputer))]
+    public abstract partial class Computer : global::System.Data.Objects.DataClasses.EntityObject
+    {
+        /// <summary>
+        /// There are no comments for Property Brand in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(IsNullable=false)]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public string Brand
+        {
+            get
+            {
+                return this._Brand;
+            }
+            set
+            {
+                this.OnBrandChanging(value);
+                this.ReportPropertyChanging("Brand");
+                this._Brand = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value, false);
+                this.ReportPropertyChanged("Brand");
+                this.OnBrandChanged();
+            }
+        }
+        private string _Brand;
+        partial void OnBrandChanging(string value);
+        partial void OnBrandChanged();
+        /// <summary>
+        /// There are no comments for Property Id in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(EntityKeyProperty=true, IsNullable=false)]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public int Id
+        {
+            get
+            {
+                return this._Id;
+            }
+            set
+            {
+                this.OnIdChanging(value);
+                this.ReportPropertyChanging("Id");
+                this._Id = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value);
+                this.ReportPropertyChanged("Id");
+                this.OnIdChanged();
+            }
+        }
+        private int _Id;
+        partial void OnIdChanging(int value);
+        partial void OnIdChanged();
+    }
+    /// <summary>
+    /// There are no comments for testModel.DesktopComputer in the schema.
+    /// </summary>
+    /// <KeyProperties>
+    /// Id
+    /// </KeyProperties>
+    [global::System.Data.Objects.DataClasses.EdmEntityTypeAttribute(NamespaceName="testModel", Name="DesktopComputer")]
+    [global::System.Runtime.Serialization.DataContractAttribute(IsReference=true)]
+    [global::System.Serializable()]
+    public partial class DesktopComputer : Computer
+    {
+        /// <summary>
+        /// Create a new DesktopComputer object.
+        /// </summary>
+        /// <param name="brand">Initial value of Brand.</param>
+        /// <param name="id">Initial value of Id.</param>
+        public static DesktopComputer CreateDesktopComputer(string brand, int id)
+        {
+            DesktopComputer desktopComputer = new DesktopComputer();
+            desktopComputer.Brand = brand;
+            desktopComputer.Id = id;
+            return desktopComputer;
+        }
+        /// <summary>
+        /// There are no comments for Property Color in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute()]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public string Color
+        {
+            get
+            {
+                return this._Color;
+            }
+            set
+            {
+                this.OnColorChanging(value);
+                this.ReportPropertyChanging("Color");
+                this._Color = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value, true);
+                this.ReportPropertyChanged("Color");
+                this.OnColorChanged();
+            }
+        }
+        private string _Color;
+        partial void OnColorChanging(string value);
+        partial void OnColorChanged();
+    }
+    /// <summary>
+    /// There are no comments for testModel.LaptopComputer in the schema.
+    /// </summary>
+    /// <KeyProperties>
+    /// Id
+    /// </KeyProperties>
+    [global::System.Data.Objects.DataClasses.EdmEntityTypeAttribute(NamespaceName="testModel", Name="LaptopComputer")]
+    [global::System.Runtime.Serialization.DataContractAttribute(IsReference=true)]
+    [global::System.Serializable()]
+    public partial class LaptopComputer : Computer
+    {
+        /// <summary>
+        /// Create a new LaptopComputer object.
+        /// </summary>
+        /// <param name="brand">Initial value of Brand.</param>
+        /// <param name="id">Initial value of Id.</param>
+        public static LaptopComputer CreateLaptopComputer(string brand, int id)
+        {
+            LaptopComputer laptopComputer = new LaptopComputer();
+            laptopComputer.Brand = brand;
+            laptopComputer.Id = id;
+            return laptopComputer;
+        }
+        /// <summary>
+        /// There are no comments for Property IsCertified in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute()]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public global::System.Nullable<bool> IsCertified
+        {
+            get
+            {
+                return this._IsCertified;
+            }
+            set
+            {
+                this.OnIsCertifiedChanging(value);
+                this.ReportPropertyChanging("IsCertified");
+                this._IsCertified = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value);
+                this.ReportPropertyChanged("IsCertified");
+                this.OnIsCertifiedChanged();
+            }
+        }
+        private global::System.Nullable<bool> _IsCertified;
+        partial void OnIsCertifiedChanging(global::System.Nullable<bool> value);
+        partial void OnIsCertifiedChanged();
+        /// <summary>
+        /// There are no comments for Property Size in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute()]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public string Size
+        {
+            get
+            {
+                return this._Size;
+            }
+            set
+            {
+                this.OnSizeChanging(value);
+                this.ReportPropertyChanging("Size");
+                this._Size = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value, true);
+                this.ReportPropertyChanged("Size");
+                this.OnSizeChanged();
+            }
+        }
+        private string _Size;
+        partial void OnSizeChanging(string value);
+        partial void OnSizeChanged();
+    }
+    /// <summary>
+    /// There are no comments for testModel.TabletComputer in the schema.
+    /// </summary>
+    /// <KeyProperties>
+    /// Id
+    /// </KeyProperties>
+    [global::System.Data.Objects.DataClasses.EdmEntityTypeAttribute(NamespaceName="testModel", Name="TabletComputer")]
+    [global::System.Runtime.Serialization.DataContractAttribute(IsReference=true)]
+    [global::System.Serializable()]
+    public partial class TabletComputer : Computer
+    {
+        /// <summary>
+        /// Create a new TabletComputer object.
+        /// </summary>
+        /// <param name="brand">Initial value of Brand.</param>
+        /// <param name="id">Initial value of Id.</param>
+        public static TabletComputer CreateTabletComputer(string brand, int id)
+        {
+            TabletComputer tabletComputer = new TabletComputer();
+            tabletComputer.Brand = brand;
+            tabletComputer.Id = id;
+            return tabletComputer;
+        }
+        /// <summary>
+        /// There are no comments for Property IsAvailable in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute()]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public global::System.Nullable<bool> IsAvailable
+        {
+            get
+            {
+                return this._IsAvailable;
+            }
+            set
+            {
+                this.OnIsAvailableChanging(value);
+                this.ReportPropertyChanging("IsAvailable");
+                this._IsAvailable = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value);
+                this.ReportPropertyChanged("IsAvailable");
+                this.OnIsAvailableChanged();
+            }
+        }
+        private global::System.Nullable<bool> _IsAvailable;
+        partial void OnIsAvailableChanging(global::System.Nullable<bool> value);
+        partial void OnIsAvailableChanged();
+        /// <summary>
+        /// There are no comments for Property ReleaseDate in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute()]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public global::System.Nullable<global::System.DateTime> ReleaseDate
+        {
+            get
+            {
+                return this._ReleaseDate;
+            }
+            set
+            {
+                this.OnReleaseDateChanging(value);
+                this.ReportPropertyChanging("ReleaseDate");
+                this._ReleaseDate = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value);
+                this.ReportPropertyChanged("ReleaseDate");
+                this.OnReleaseDateChanged();
+            }
+        }
+        private global::System.Nullable<global::System.DateTime> _ReleaseDate;
+        partial void OnReleaseDateChanging(global::System.Nullable<global::System.DateTime> value);
+        partial void OnReleaseDateChanged();
     }
 }
