@@ -44,6 +44,8 @@
 - Fixed MembershipProvider to only return exact matches when calling GetUser(string username) and 
   GetUserNameByEmail (MySQL bug #61027, Oracle bug #12562287).
 - added the ability to raise a join on the right side of a join to a derived table in EF code generation
+- Modified EFMySqlDataReader to read byte[] values as booleans when the server incorrectly reports bits as binaries 
+  when they are members of internal EF UNIONS (MySQL bug #60652, Oracle bug #12593193).
 
 Version 6.1.5
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
